# cold_email_generator

./: Dockerfile  README.md  chains.py  docker-compose.yml  main.py  portfolio.py  prompts.py  pyproject.toml
.github/workflows/: CI.yml
chroma/: chroma.sqlite3
cold_email_generator/: app.py  chains.py  main.py  portfolio.py  prompts.py  utils.py
