[tool.poetry]
name = "cold_email_generator"
version = "0.1.0"
description = "UI to create cold emails from job posts"
authors = ["luca spolladore"]
readme = "README.md"
packages = [{ include = "cold_email_generator" }]
include = ["resources/*", "chroma/*"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
langchain = "^0.3.1"
langchain-groq = "^0.2.0"
streamlit = "^1.39.0"
chromadb = "^0.5.11"
langchain-community = "^0.3.1"
protobuf = "3.20"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
cold-email = "cold_email_generator.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
